Creación de DTO para la simplificación de información
