# ipartekmg0966/src/main/openapi/ipartekmg0966.yml
@@ -176,6 +176,20 @@ paths:
                       type: array
                       items:
                         $ref: '#/components/schemas/Alumnos'
+  /alumnos/simplificados:
+      get:
+        tags:
+          - alumnos
+        responses:
+          '200':
+            description: OK
+            content:
+              application/json:
+                  schema:
+                      type: array
+                      items:
+                        $ref: '#/components/schemas/Alumnos'
+                        
   /alumnos/{codigo}:
       get:
         tags:
